Bug 410959 - Full screen mode disappearing when invoking popup palette and color history
Summary: Full screen mode disappearing when invoking popup palette and color history
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.4
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-15 21:26 UTC by Manga Tengu
Modified: 2020-01-28 09:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-9743-0.html (1.00 KB, text/html)
2019-08-16 22:29 UTC, vanyossi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Manga Tengu 2019-08-15 21:26:19 UTC
When invoking a popup docker (color selector, color history) in full screen, the os switches back to the desktop and displays the pop up there, alone (over all the other applications but without the krita window).

STEPS TO REPRODUCE
1. go full screen: it works fine
2. go desktop screen
3. go full screen: krita hides and shows only the popup palette over the desktop

OBSERVED RESULT
So macOS has this disgusting sliding desktop effect when you open a fullscreen app. The whole desktop will disappear sliding to the left. Then if you get back to it, your full screen app will disappear sliding to the right...this is what happens when I open a pop up palette. It opens alone on top of the desktop while the krita fullscreen window has slid to the right and is invisible

EXPECTED RESULT
Krita still be visible under the popup palette even if I switch back and forth fullscreen and windowed mode...

MacOS Latest/Krita 4.2.X, actually tested on 4.2.4, 4.2.5

ADDITIONAL INFORMATION
You definitely need a popup layers, that would be so cool..
Comment 1 Manga Tengu 2019-08-15 21:27:21 UTC
Step 2 I mean leave full screen mode
Comment 2 vanyossi 2019-08-16 22:29:26 UTC
Created attachment 122190 [details]
attachment-9743-0.html

I can confirm this bug. Only right click popup works correctly in
fullscreen. Color history ("h" shortcut by default) makes krita go back and
forth from fullscreen to desktop.



El jue., 15 ago 2019 23:27, Manga Tengu <bugzilla_noreply@kde.org> escribió:

> https://bugs.kde.org/show_bug.cgi?id=410959
>
> --- Comment #1 from Manga Tengu <mangatengu@gmail.com> ---
> Step 2 I mean leave full screen mode
>
> --
> You are receiving this mail because:
> You are watching the assignee of the bug.
Comment 3 Halla Rempt 2019-08-27 12:32:52 UTC
Okay, this must be macOS specific then.
Comment 4 Halla Rempt 2020-01-16 14:40:45 UTC
Git commit 8621ed93b311bd8035390bb8063609b7b312dd24 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 16/01/2020 at 14:40.
Pushed by rempt into branch 'master'.

Use Qt::Popup for color selectors popup widgets

on macOS the Popup flag is necessary to make the widget
show on the current virtual desktop. This necessary as fullscreen
mode creates a virtual desktop for the application.

M  +1    -1    plugins/dockers/advancedcolorselector/kis_color_selector_base.cpp

https://invent.kde.org/kde/krita/commit/8621ed93b311bd8035390bb8063609b7b312dd24
Comment 5 Halla Rempt 2020-01-28 09:50:29 UTC
Git commit efeb05f2fc4cffbd47ac3d29a23c87bf8c7cb70f by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 28/01/2020 at 09:10.
Pushed by rempt into branch 'krita/4.2'.

Use Qt::Popup for color selectors popup widgets

on macOS the Popup flag is necessary to make the widget
show on the current virtual desktop. This necessary as fullscreen
mode creates a virtual desktop for the application.
(cherry picked from commit 8621ed93b311bd8035390bb8063609b7b312dd24)

M  +1    -1    plugins/dockers/advancedcolorselector/kis_color_selector_base.cpp

https://invent.kde.org/kde/krita/commit/efeb05f2fc4cffbd47ac3d29a23c87bf8c7cb70f