Use Qt::Popup for color selectors popup widgets

on macOS the Popup flag is necessary to make the widget
show on the current virtual desktop. This necessary as fullscreen
mode creates a virtual desktop for the application.

BUG:410959